# EFIS-MiniMap

./: .gitignore  CMakeLists.txt
src/: glutils.c  glutils.h  main.c  osmloader.c  osmloader.h  strhash.c  strhash.h  temp
src/headers/: windowdefs.h
